# rubaiyat

./: LICENSE  README.md  alembic.ini  logging.conf  pyproject.toml
app/: main.py
app/controllers/: main_controller.py
app/core/: config.py  db.py  logger_setup.py
app/cruds/: rubaiyat_crud.py
app/models/: rubaiyat_models.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: index.html
app/utils/: alembic_upgrade.py  migrate_csv.py
data/: database.db
migrations/: env.py
migrations/versions/: bfd640f2cf8b_create_tables.py
misc/: rubaiyat.csv
